--- a/PokemonGuesser/Base.lproj/Main.storyboard
+++ b/PokemonGuesser/Base.lproj/Main.storyboard
@@ -110,18 +110,66 @@
         <!--Favorites-->
         <scene sceneID="bP1-Pb-sa0">
             <objects>
-                <viewController title="Favorites" id="s7I-hq-ODy" sceneMemberID="viewController">
+                <viewController title="Favorites" id="s7I-hq-ODy" customClass="FavoriteViewController" customModule="PokemonGuesser" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="czv-G7-jOc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xcx-mp-zWu">
+                                <rect key="frame" x="20" y="79" width="353" height="670"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="r0B-Qs-b7f">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokemonCell" id="S7y-8U-9xR" customClass="PokemonCell" customModule="PokemonGuesser" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="SzY-Bg-sOm" customClass="PokemonCell" customModule="PokemonGuesser" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V0Q-ld-5a2">
+                                                    <rect key="frame" x="15" y="49" width="98" height="71"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCP-qW-afd">
+                                                    <rect key="frame" x="43" y="20" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="pokemonImageView" destination="V0Q-ld-5a2" id="VqB-hE-lv7"/>
+                                            <outlet property="pokemonNameLabel" destination="WCP-qW-afd" id="MgP-5w-mvt"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="GJj-28-Pxe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="GJj-28-Pxe" firstAttribute="bottom" secondItem="xcx-mp-zWu" secondAttribute="bottom" constant="20" id="3q0-Tx-J4d"/>
+                            <constraint firstItem="GJj-28-Pxe" firstAttribute="trailing" secondItem="xcx-mp-zWu" secondAttribute="trailing" constant="20" id="N1N-e8-zvl"/>
+                            <constraint firstItem="xcx-mp-zWu" firstAttribute="leading" secondItem="GJj-28-Pxe" secondAttribute="leading" constant="20" id="bA8-Op-dfe"/>
+                            <constraint firstItem="xcx-mp-zWu" firstAttribute="top" secondItem="GJj-28-Pxe" secondAttribute="top" constant="20" id="qwf-Yp-RSr"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Favorite" id="gKe-7k-Z4h"/>
+                    <connections>
+                        <outlet property="collectionView" destination="xcx-mp-zWu" id="Z7Q-qQ-LzM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O0y-Xk-gdp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="498" y="704"/>
+            <point key="canvasLocation" x="484.73282442748092" y="695.77464788732402"/>
         </scene>
         <!--Description View Controller-->
         <scene sceneID="f7w-VJ-e1Q">
