--- a/PokemonGuesser/Base.lproj/Main.storyboard
+++ b/PokemonGuesser/Base.lproj/Main.storyboard
@@ -136,14 +136,17 @@
                                                     <rect key="frame" x="15" y="49" width="98" height="71"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCP-qW-afd">
-                                                    <rect key="frame" x="43" y="20" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCP-qW-afd">
+                                                    <rect key="frame" x="2" y="20" width="124" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="WCP-qW-afd" secondAttribute="trailing" constant="2" id="d4F-aN-Ufk"/>
+                                                <constraint firstItem="WCP-qW-afd" firstAttribute="leading" secondItem="SzY-Bg-sOm" secondAttribute="leading" constant="2" id="zlM-J5-mwv"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="pokemonImageView" destination="V0Q-ld-5a2" id="VqB-hE-lv7"/>
@@ -165,11 +168,12 @@
                     <tabBarItem key="tabBarItem" title="Favorite" id="gKe-7k-Z4h"/>
                     <connections>
                         <outlet property="collectionView" destination="xcx-mp-zWu" id="Z7Q-qQ-LzM"/>
+                        <segue destination="XpJ-ph-uwZ" kind="showDetail" identifier="showDescription" id="ISM-r1-LCW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O0y-Xk-gdp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="484.73282442748092" y="695.77464788732402"/>
+            <point key="canvasLocation" x="500" y="697.88732394366195"/>
         </scene>
         <!--Description View Controller-->
         <scene sceneID="f7w-VJ-e1Q">
@@ -242,9 +246,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ivg-RH-iig" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-358.01526717557249" y="1493.661971830986"/>
+            <point key="canvasLocation" x="21" y="1456"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="ISM-r1-LCW"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
